# wirte-tool

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  PATCH_NOTES.md  README.md  README_FONTS.md  REFACTOR_PLAN.md  RELEASE_CHECKLIST.md  TEST_PLAN.md  TEST_PLAN_CHAR_EVENTS.md  TEST_PLAN_REVERSE_ENGINEER_V2.md  TEST_PLAN_WIKI_V2.md  analyze_events.py  launch_asset_editor.bat  launch_config_editor.bat  launch_event_analyzer.bat  launch_tools.bat  pyproject.toml  requirements.txt  start_app.py  start_app.spec  start_asset_editor.py  start_assistant_event_editor.py  start_tools.py  wirte-tool-python314-hotfix.patch  wirte-tool-training-module-review.md  wirte-tool-valid-hotfix.patch  wirte-tool-项目结构综合建议.md  基调大纲模块需求说明.md
.github/workflows/: ci.yml
docs/architecture/: wirte-tool-项目结构综合建议.md  wirte-tool_项目分析与重构建议汇总.md
docs/notes/: IMPLEMENTATION_PLAN.md
docs/testing/: BETA_VALIDATION.md  RELEASE_BLOCKERS.md  TEST_PLAN.md
tests/: test_ai_tools.py  test_commands.py  test_editor_focus_helpers.py  test_evidence_commands.py  test_exporter.py  test_focus_mode_manager.py  test_icon_manager.py  test_module_policy.py  test_paths.py  test_project_manager.py  test_project_tools.py  test_relationship_commands.py  test_reverse_engineer.py  test_reverse_engineer_fixes.py  test_script_controller.py  test_sidebar_layout.py  test_tone_outline.py  test_training.py  test_training_regressions.py  test_workspace_builder.py
tools/: __init__.py
tools/launchers/: __init__.py  start_app.py  start_tools.py
tools/standalone/: __init__.py  analyze_events.py  start_asset_editor.py  start_assistant_event_editor.py
tools/windows/: launch_asset_editor.bat  launch_config_editor.bat  launch_event_analyzer.bat  launch_tools.bat
writer_app/: asset_editor_main.py  main.py
writer_app/app/: __init__.py  bootstrap.py  menu_builder.py  shortcut_registry.py  workspace_builder.py
writer_app/controllers/: ai_controller.py  base_controller.py  flowchart_controller.py  guide_controller.py  relationship_controller.py  script_controller.py  training_controller.py  wiki_controller.py
writer_app/core/: audio.py  commands.py  commands_base.py  commands_evidence.py  commands_global.py  commands_outline.py  commands_relationship.py  commands_script.py  commands_timeline.py  commands_tone.py  commands_wiki.py  controller_registry.py  exporter.py  font_manager.py  help_manager.py  icon_manager.py  logic_validator.py  (+13 more)
(+37 files in other folders)
